--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="row">
                     <div class="col-14 d-flex flex-wrap justify-content-between align-items-center">
                         <div class="site-branding d-flex align-items-center">
-                           <a class="d-block" href="index.html" rel="home"><img class="d-block" width=80% src="images/logo.png" alt="logo"></a>
+                           <a class="d-block" href="index.html" rel="home"><img class="d-block" width="80%" src="images/logo.png" alt="logo"></a>
                         </div><!-- .site-branding -->
 
                         <nav class="site-navigation d-flex justify-content-end align-items-center">
@@ -66,7 +66,7 @@
             <div class="row">
                 <div class="col-12">
                     <h1> Welcome to Rotary Vasudha</h1>
-                    <img src="images/hero.jpg" width=100%></a>
+                    <img src="images/hero.jpg" width="100%" alt="logo">
                 </div><!-- .col-12 -->
             </div><!-- .row -->
         </div><!-- .container -->
@@ -90,7 +90,7 @@
  </footer>
 
 
-    <script type='text/javascript' src='js/jquery.js'></script>
-    <script type='text/javascript' src='js/custom.js'></script>
+    <script src='js/jquery.js'></script>
+    <script src='js/custom.js'></script>
 </body>
 </html>
