--- a/aboutus.html
+++ b/aboutus.html
@@ -38,13 +38,13 @@
                 <div class="row">
                     <div class="col-14 d-flex flex-wrap justify-content-between align-items-center">
                         <div class="site-branding d-flex align-items-center">
-                           <a class="d-block" href="index.html" rel="home"><img class="d-block" width=80% src="images/logo.png" alt="logo"></a>
+                           <a class="d-block" href="index.html" rel="home"><img class="d-block" width="450" src="images/logo.png" alt="logo"></a>
                         </div><!-- .site-branding -->
 
                         <nav class="site-navigation d-flex justify-content-end align-items-center">
                             <ul class="d-flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                <li><a href="index.html">Home</a></li>
-                                <li class="current-menu-item"><a href="aboutus.html">About Us</a></li>
+                                <li class="current-menu-item"><a href="index.html">Home</a></li>
+                                <li><a href="aboutus.html">About us</a></li>
                             </ul>
                         </nav><!-- .site-navigation -->
 
