--- a/aboutus.html
+++ b/aboutus.html
@@ -90,7 +90,7 @@
             <div class="row">
                 <div class="col-12">
                     <h1> Committe Members:</h1>
-                    <table border='1' align='center' width=100%>
+                    <table class="center">
                         <tr class="theading">
                             <td>Sno.</td>
                             <td>Membership ID</td>
@@ -109,7 +109,7 @@
                             <td>President</td>
                             <td>udit.ukg@gmail.com</td>
                             <td>7891492201</td>
-                            <td><img src="images/udit.jpg" width="100"></td>                            
+                            <td><img src="images/udit.jpg" width="100" alt="President"></td>                            
                         </tr>
                         <tr>
                             <td>2.</td>
@@ -119,7 +119,7 @@
                             <td>Treasurer</td>
                             <td>sopan.sharma@gmail.com</td>
                             <td>9999999999</td>
-                            <td><img src="images/sopan.jpg" width="100"></td>                            
+                            <td><img src="images/sopan.jpg" width="100" alt="Treasurer"></td>                            
                         </tr>
                         <tr>
                             <td>3.</td>
@@ -129,7 +129,7 @@
                             <td>Secretary</td>
                             <td>nishant.jain@gmail.com</td>
                             <td>9999999999</td>
-                            <td><img src="images/nishant.jpg" width="100"></td>                            
+                            <td><img src="images/nishant.jpg" width="100" alt="Secretary"></td>                            
                         </tr>
                     </table>
                 </div>
@@ -155,7 +155,7 @@
  </footer>
 
 
-    <script type='text/javascript' src='js/jquery.js'></script>
-    <script type='text/javascript' src='js/custom.js'></script>
+    <script src='js/jquery.js'></script>
+    <script src='js/custom.js'></script>
 </body>
 </html>
