--- a/index.html
+++ b/index.html
@@ -1,8 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<?php
-	include('header.html');
-?>
+
+
+
+<head>
+    <title>Home | Rotary Vasudha</title>
+
+   <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/elegant-fonts.css">
+    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
+   <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+
+    <header class="site-header">
+        <div class="top-header-bar">
+            <div class="container">
+                <div class="row flex-wrap justify-content-center justify-content-lg-between align-items-lg-center">
+                    <div class="col-12 col-lg-8 d-none d-md-flex flex-wrap justify-content-center justify-content-lg-start mb-3 mb-lg-0">
+                       
+						<div class="header-bar-email">
+						  E-Mail: <a href="#">dhingsurbhi@gmail.com</a>
+                        </div><!-- .header-bar-email -->
+						
+                        <div class="header-bar-text">
+                            <p>PHONE: <span>+91 96029 58555</span></p>
+                        </div><!-- .header-bar-text -->
+                    </div><!-- .col -->
+
+                    <div class="col-12 col-lg-4 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
+                        <div class="donate-btn">
+                            <a href="adminlogin.php">Sign in</a>
+                        </div><!-- .donate-btn -->
+                    </div><!-- .col -->
+                </div><!-- .row -->
+            </div><!-- .container -->
+        </div><!-- .top-header-bar -->
+
+        <div class="nav-bar">
+            <div class="container">
+                <div class="row">
+                    <div class="col-14 d-flex flex-wrap justify-content-between align-items-center">
+                        <div class="site-branding d-flex align-items-center">
+                           <a class="d-block" href="index.p" rel="home"><img class="d-block" width=80% src="images/logo.png" alt="logo"></a>
+                        </div><!-- .site-branding -->
+
+                        <nav class="site-navigation d-flex justify-content-end align-items-center">
+                            <ul class="d-flex flex-column flex-lg-row justify-content-lg-end align-content-center">
+                                <li class="current-menu-item"><a href="index.php">Home</a></li>
+                                <li><a href="aboutus.php">About us</a></li>
+                                <li><a href="eventview.php">Events</a></li>
+                                <li><a href="gallery.php">Gallery</a></li>
+                                <li><a href="memberview.php">Members</a></li>
+                                <li><a href="awards.php">Awards</a></li>
+                                <li><a href="scrapview.php">Scrapbooks</a></li>
+								<li><a href="citation.php">R.I. Citation Report (2019-20)</a></li>
+                                <li><a href="contactus.php">Contact Us</a></li>
+                            </ul>
+                        </nav><!-- .site-navigation -->
+
+                        <div class="hamburger-menu d-lg-none">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div><!-- .hamburger-menu -->
+                    </div><!-- .col -->
+                </div><!-- .row -->
+            </div><!-- .container -->
+        </div><!-- .nav-bar -->
+        <script>
+            window.oncontextmenu = function () {
+                        return false;
+                    }
+                    $(document).keydown(function (event) {
+                        if (event.keyCode == 123) {
+                            return false;
+                        }
+                        else if ((event.ctrlKey && event.shiftKey && event.keyCode == 73) || (event.ctrlKey && event.shiftKey && event.keyCode == 74)) {
+                            return false;
+                        }
+                    });
+                </script>
+    </header><!-- .site-header -->
+
 
     <div class="swiper-container hero-slider">
         <div class="swiper-wrapper">
@@ -681,10 +768,103 @@
         </div><!-- .container -->
     </div><!-- .our-causes -->
 
-   <?php
-	include('footer.html');
-?>
 
+
+    <footer class="site-footer">
+        <div class="footer-widgets">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <div class="foot-about">
+                            <h2><a class="foot-logo" href="#"><img src="images/foot-logo.png" alt=""></a></h2>
+							<h2> Rotary Club of Udaipur VASUDHA</h2>
+
+                            <p>Rotary is where neighbors, friends, and problem-solvers share ideas, join leaders, and take action to create lasting change.</p>
+
+                            <ul class="d-flex flex-wrap align-items-center">
+                                <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
+                                <li><a href="https://www.facebook.com/Rotary-Club-Udaipur-Vasudha-1128536293962452"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div><!-- .foot-about -->
+                    </div><!-- .col -->
+
+                    <div class="col-12 col-md-6 col-lg-3 mt-5 mt-md-0">
+                        <h2>Useful Links</h2>
+
+                        <ul>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Gallery</a></li>
+                            <li><a href="#">Donate</a></li>
+                            <li><a href="#">View Events</a></li>
+                            <li><a href="#">Become a Volunteer</a></li>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                        </ul>
+                    </div><!-- .col -->
+
+                    <div class="col-12 col-md-6 col-lg-3 mt-5 mt-md-0">
+                        <div class="foot-latest-news">
+                            <h2>Latest News</h2>
+
+                            <ul>
+                                <li>
+                                    <h3><a href="#">Gifted a Bag of Smile</a></h3>
+                                    <div class="posted-date">June 18, 2020</div>
+                                </li>
+
+                                <li>
+                                    <h3><a href="#">Online workshop on E-Learning</a></h3>
+                                    <div class="posted-date">May 28, 2020</div>
+                                </li>
+
+                                <li>
+                                    <h3><a href="#">Online Seminar on Women Mental Health</a></h3>
+                                    <div class="posted-date">May 27, 2020</div>
+                                </li>
+                            </ul>
+                        </div><!-- .foot-latest-news -->
+                    </div><!-- .col -->
+
+                    <div class="col-12 col-md-6 col-lg-3 mt-5 mt-md-0">
+                        <div class="foot-contact">
+                            <h2>Contact</h2>
+
+                            <ul>
+                                <li><i class="fa fa-phone"></i><span>+91 96029 58555</span></li>
+                                <li><i class="fa fa-envelope"></i><span>dhingsurbhi@gmail.com</span></li>
+                                <li><i class="fa fa-map-marker"></i><span>Sector-8, Udaipur-313001, Rajasthan INDIA</span></li>
+                            </ul>
+                        </div><!-- .foot-contact -->
+
+                        <div class="subscribe-form">
+                            <form class="d-flex flex-wrap align-items-center" action="footer1.php" method="post">
+                                <input type="email" placeholder="Your email" name="email">
+                                <input type="submit" value="send">
+                            </form><!-- .flex -->
+                        </div><!-- .search-widget -->
+                    </div><!-- .col -->
+                </div><!-- .row -->
+            </div><!-- .container -->
+        </div><!-- .footer-widgets -->
+
+        <div class="footer-bar">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <p class="m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by <a href="https://www.facebook.com/udit.ukg/"> @UD DIGITAL WORLD</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                    </div><!-- .col-12 -->
+                </div><!-- .row -->
+            </div><!-- .container -->
+        </div><!-- .footer-bar -->
+    </footer><!-- .site-footer -->
+
+</body>
     <script type='text/javascript' src='js/jquery.js'></script>
     <script type='text/javascript' src='js/jquery.collapsible.min.js'></script>
     <script type='text/javascript' src='js/swiper.min.js'></script>
