--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="row">
                     <div class="col-14 d-flex flex-wrap justify-content-between align-items-center">
                         <div class="site-branding d-flex align-items-center">
-                           <a class="d-block" href="index.p" rel="home"><img class="d-block" width=80% src="images/logo.png" alt="logo"></a>
+                           <a class="d-block" href="index.p" rel="home"><img class="d-block" width=500 src="images/logo.png" alt="logo"></a>
                         </div><!-- .site-branding -->
 
                         <nav class="site-navigation d-flex justify-content-end align-items-center">
@@ -245,7 +245,7 @@
     </div><!-- .home-page-icon-boxes -->
 
 
-    <iframe width="1500" height="315" src="https://www.youtube.com/embed/Ubqc7_MnBeE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1500" height="315" src="https://www.youtube.com/embed/Ubqc7_MnBeE"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 
@@ -784,7 +784,7 @@
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="foot-about">
-                            <h2><a class="foot-logo" href="#"><img src="images/foot-logo.png" alt=""></a></h2>
+                            <a class="foot-logo" href="#"><img src="images/foot-logo.png" alt=""></a>
 							<h2> Rotary Club of Udaipur VASUDHA</h2>
 
                             <p>Rotary is where neighbors, friends, and problem-solvers share ideas, join leaders, and take action to create lasting change.</p>
@@ -873,14 +873,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     </footer><!-- .site-footer -->
 
 </body>
-    <script type='text/javascript' src='js/jquery.js'></script>
-    <script type='text/javascript' src='js/jquery.collapsible.min.js'></script>
-    <script type='text/javascript' src='js/swiper.min.js'></script>
-    <script type='text/javascript' src='js/jquery.countdown.min.js'></script>
-    <script type='text/javascript' src='js/circle-progress.min.js'></script>
-    <script type='text/javascript' src='js/jquery.countTo.min.js'></script>
-    <script type='text/javascript' src='js/jquery.barfiller.js'></script>
-    <script type='text/javascript' src='js/custom.js'></script>
+    <script  src='js/jquery.js'></script>
+    <script  src='js/jquery.collapsible.min.js'></script>
+    <script  src='js/swiper.min.js'></script>
+    <script  src='js/jquery.countdown.min.js'></script>
+    <script  src='js/circle-progress.min.js'></script>
+    <script  src='js/jquery.countTo.min.js'></script>
+    <script  src='js/jquery.barfiller.js'></script>
+    <script  src='js/custom.js'></script>
 
 </body>
 </html>
