--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
                 <div class="row">
                     <div class="col-14 d-flex flex-wrap justify-content-between align-items-center">
                         <div class="site-branding d-flex align-items-center">
-                           <a class="d-block" href="index.p" rel="home"><img class="d-block" width=80% src="images/logo.png" alt="logo"></a>
+                           <a class="d-block" href="index.html" rel="home"><img class="d-block" width=80% src="images/logo.png" alt="logo"></a>
                         </div><!-- .site-branding -->
 
                         <nav class="site-navigation d-flex justify-content-end align-items-center">
