--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <li><a href="aboutus.html">About us</a></li>
                                 <li><a href="#">Events</a></li>
                                 <li><a href="#">Gallery</a></li>
-                                <li><a href="#">Members</a></li>
+                                <li><a href="/XML/NGO.xml">Members (XML)</a></li>
                                 <li><a href="#">Awards</a></li>
                                 <li><a href="#">Scrapbooks</a></li>
 							    <li><a href="#">Contact Us</a></li>
