--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                                 <li><a href="#">Events</a></li>
                                 <li><a href="#">Gallery</a></li>
                                 <li><a href="XML/NGO.xml">Members (XML)</a></li>
+                                <li><a href="Registration/form.html">Members Registration</a></li>
                                 <li><a href="#">Awards</a></li>
                                 <li><a href="#">Scrapbooks</a></li>
 							    <li><a href="#">Contact Us</a></li>
