--- a/Registration/form.html
+++ b/Registration/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Bank Registration form </title>
+    <title>Member Registration form </title>
    
     <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
