--- a/CAT2/index.html
+++ b/CAT2/index.html
@@ -68,7 +68,7 @@
                 <div class="col" id="error10" style="color:red"></div>
                 
             </div>
-            <div id="message">
+            <div id="message"></div>
                 <h3>Password must contain the following:</h3>
                 <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
                 <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
