--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                                 <li><a href="#">Gallery</a></li>
                                 <li><a href="XML/NGO.xml">Members (XML)</a></li>
                                 <li><a href="Registration/form.html">Members Registration</a></li>
-                                <li class="current-menu-item"><a href="json.html">Members Update (JSON)</a></li>                                
+                                <li><a href="json.html">Members Update (JSON)</a></li>    
+                                <li ><a href="filter.html">Angular JS (Filter)</a></li>                              
 
                                 <li><a href="#">Awards</a></li>
                                 <li><a href="#">Scrapbooks</a></li>
