--- a/json.html
+++ b/json.html
@@ -156,4 +156,5 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 <script src="./JSON_AJAX/angular.min.js"></script>
 <script src="./JSON_AJAX/product.js"></script>
+<!-- <script src='./Angular/script.js'></script> -->
 </html>
