--- a/json.html
+++ b/json.html
@@ -52,6 +52,7 @@
                                 <li><a href="#">Gallery</a></li>
                                 <li><a href="#">Members</a></li>
                                 <li class="current-menu-item"><a href="json.html">Members Update (JSON)</a></li>
+                                <li  class="current-menu-item" ><a href="filter.html">Angular JS (Filter)</a></li> 
                                 <li><a href="#">Awards</a></li>
                                 <li><a href="#">Scrapbooks</a></li>
 							    <li><a href="#">Contact Us</a></li>
