--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                     <div class="col-12 col-lg-4 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
                         <div class="donate-btn">
-                            <a href="adminlogin.php">Sign in</a>
+                            <a href="./php/adminlogin.php">Sign in</a>
                         </div><!-- .donate-btn -->
                     </div><!-- .col -->
                 </div><!-- .row -->
